# Telegramm-Bot

./: .gitignore  mks_position.py  pyproject.toml
telegramm_bot/: call_back_button_bot.py  callback_factory_bot.py  eho_bot.py  guess_number_bot.py  inline_keyboard_bot.py  keyboard_present_bot.py  polling_example.py  sea_buttle_bot.py
telegramm_bot/Bookbot/: main.py
telegramm_bot/Bookbot/book/: book.txt
telegramm_bot/Bookbot/config_data/: config.py
telegramm_bot/Bookbot/handlers/: other_handlers.py  user_handlers.py
telegramm_bot/Bookbot/keyboards/: bookmarks_kb.py
telegramm_bot/Bookbot/services/: file_handling.py
telegramm_bot/middleware_example_bot/: main.py
telegramm_bot/middleware_example_bot/handlers/: other.py  user.py
telegramm_bot/middleware_example_bot/middlewares/: inner.py  outher.py
telegramm_bot/modular_echo_bot/: main.py
telegramm_bot/modular_echo_bot/config_data/: config.py
telegramm_bot/modular_echo_bot/handlers/: other_handlers.py  user_handlers.py
telegramm_bot/stone_paper_scissors_bot/: main.py
telegramm_bot/stone_paper_scissors_bot/config_data/: config.py
telegramm_bot/stone_paper_scissors_bot/handlers/: user_handlers.py
telegramm_bot/stone_paper_scissors_bot/keyboards/: keyboards.py
telegramm_bot/stone_paper_scissors_bot/services/: services.py
